// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`columnGap renders 0 1`] = `
Array [
  .c0 {
  -webkit-column-gap: 0;
  column-gap: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-gap: 0;
  column-gap: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-gap: 0;
  column-gap: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-gap: 0;
  column-gap: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`columnGap renders function 1`] = `
Array [
  .c0 {
  -webkit-column-gap: hasnot;
  column-gap: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-gap: has;
  column-gap: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-gap: hasnot;
  column-gap: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-gap: has;
  column-gap: has;
}

<div
    className="c0"
  />,
]
`;

exports[`columnGap renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-column-gap: invalid.path.1;
  column-gap: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-gap: invalid.path.1;
  column-gap: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-gap: invalid.path.1;
  column-gap: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-gap: invalid.path.1;
  column-gap: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`columnGap renders negative number 1`] = `
Array [
  .c0 {
  -webkit-column-gap: -54881px;
  column-gap: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-gap: -54881px;
  column-gap: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-gap: -42365px;
  column-gap: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-gap: -42365px;
  column-gap: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`columnGap renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  -webkit-column-gap: July;
  column-gap: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-gap: August;
    column-gap: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-gap: September;
    column-gap: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-gap: November;
    column-gap: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-column-gap: August;
    column-gap: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-gap: July;
  column-gap: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-gap: August;
    column-gap: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-gap: September;
    column-gap: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-gap: November;
    column-gap: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-column-gap: August;
    column-gap: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-gap: January;
  column-gap: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-gap: December;
    column-gap: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-gap: April;
    column-gap: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-gap: May;
    column-gap: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-column-gap: June;
    column-gap: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-gap: January;
  column-gap: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-gap: December;
    column-gap: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-gap: April;
    column-gap: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-gap: May;
    column-gap: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-column-gap: June;
    column-gap: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`columnGap renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-column-gap: July;
    column-gap: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-gap: August;
    column-gap: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-gap: September;
    column-gap: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-column-gap: November;
    column-gap: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-column-gap: July;
    column-gap: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-gap: August;
    column-gap: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-gap: September;
    column-gap: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-column-gap: November;
    column-gap: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-gap: May;
    column-gap: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-gap: June;
    column-gap: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-gap: April;
    column-gap: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-column-gap: November;
    column-gap: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-gap: May;
    column-gap: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-gap: June;
    column-gap: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-gap: April;
    column-gap: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-column-gap: November;
    column-gap: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`columnGap renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  -webkit-column-gap: July;
  column-gap: July;
}

@media May {
  .c0 {
    -webkit-column-gap: August;
    column-gap: August;
  }
}

@media April {
  .c0 {
    -webkit-column-gap: September;
    column-gap: September;
  }
}

@media January {
  .c0 {
    -webkit-column-gap: November;
    column-gap: November;
  }
}

@media April {
  .c0 {
    -webkit-column-gap: August;
    column-gap: August;
  }
}

@media June {
  .c0 {
    -webkit-column-gap: November;
    column-gap: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-gap: July;
  column-gap: July;
}

@media May {
  .c0 {
    -webkit-column-gap: August;
    column-gap: August;
  }
}

@media April {
  .c0 {
    -webkit-column-gap: September;
    column-gap: September;
  }
}

@media January {
  .c0 {
    -webkit-column-gap: November;
    column-gap: November;
  }
}

@media April {
  .c0 {
    -webkit-column-gap: August;
    column-gap: August;
  }
}

@media June {
  .c0 {
    -webkit-column-gap: November;
    column-gap: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-gap: April;
  column-gap: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-column-gap: November;
    column-gap: November;
  }
}

@media April {
  .c0 {
    -webkit-column-gap: January;
    column-gap: January;
  }
}

@media January {
  .c0 {
    -webkit-column-gap: December;
    column-gap: December;
  }
}

@media April {
  .c0 {
    -webkit-column-gap: April;
    column-gap: April;
  }
}

@media June {
  .c0 {
    -webkit-column-gap: May;
    column-gap: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-gap: April;
  column-gap: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-column-gap: November;
    column-gap: November;
  }
}

@media April {
  .c0 {
    -webkit-column-gap: January;
    column-gap: January;
  }
}

@media January {
  .c0 {
    -webkit-column-gap: December;
    column-gap: December;
  }
}

@media April {
  .c0 {
    -webkit-column-gap: April;
    column-gap: April;
  }
}

@media June {
  .c0 {
    -webkit-column-gap: May;
    column-gap: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`columnGap renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    -webkit-column-gap: July;
    column-gap: July;
  }
}

@media April {
  .c0 {
    -webkit-column-gap: August;
    column-gap: August;
  }
}

@media January {
  .c0 {
    -webkit-column-gap: September;
    column-gap: September;
  }
}

@media April {
  .c0 {
    -webkit-column-gap: November;
    column-gap: November;
  }
}

@media June {
  .c0 {
    -webkit-column-gap: August;
    column-gap: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-column-gap: July;
    column-gap: July;
  }
}

@media April {
  .c0 {
    -webkit-column-gap: August;
    column-gap: August;
  }
}

@media January {
  .c0 {
    -webkit-column-gap: September;
    column-gap: September;
  }
}

@media April {
  .c0 {
    -webkit-column-gap: November;
    column-gap: November;
  }
}

@media June {
  .c0 {
    -webkit-column-gap: August;
    column-gap: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-column-gap: January;
    column-gap: January;
  }
}

@media April {
  .c0 {
    -webkit-column-gap: December;
    column-gap: December;
  }
}

@media January {
  .c0 {
    -webkit-column-gap: April;
    column-gap: April;
  }
}

@media April {
  .c0 {
    -webkit-column-gap: May;
    column-gap: May;
  }
}

@media June {
  .c0 {
    -webkit-column-gap: June;
    column-gap: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-column-gap: January;
    column-gap: January;
  }
}

@media April {
  .c0 {
    -webkit-column-gap: December;
    column-gap: December;
  }
}

@media January {
  .c0 {
    -webkit-column-gap: April;
    column-gap: April;
  }
}

@media April {
  .c0 {
    -webkit-column-gap: May;
    column-gap: May;
  }
}

@media June {
  .c0 {
    -webkit-column-gap: June;
    column-gap: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`columnGap renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-column-gap: 54881px;
  column-gap: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-gap: 54881px;
  column-gap: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-gap: 42365px;
  column-gap: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-gap: 42365px;
  column-gap: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`columnGap renders string 1`] = `
Array [
  .c0 {
  -webkit-column-gap: July;
  column-gap: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-gap: July;
  column-gap: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-gap: June;
  column-gap: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-gap: June;
  column-gap: June;
}

<div
    className="c0"
  />,
]
`;

exports[`columnGap renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`columnGap renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-column-gap: DarkSlateBlue;
  column-gap: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-gap: DarkSlateBlue;
  column-gap: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-gap: DarkSlateBlue;
  column-gap: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-gap: DarkSlateBlue;
  column-gap: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
